# SingularityV2

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  FEATURES.md  LESSONS_LEARNED.md  LIVE_TV_NOTES.md  MPV_PLAN.md  Singularitydeux.apk.idsig  category-order.csv  index.html  package-lock.json  package.json  plan-vod-playback-fix.md  singularity-movie-categories.xlsx  singularity-series-categories.xlsx  version.json
.cargo/: config.toml
.github/workflows/: build.yml
.rollback/: HomeScreen.tsx  MainLayout.css  MainLayout.tsx  SeriesScreen.tsx  VodScreen.tsx  exportCsv.ts  genreMap.ts  index.ts  lib.rs
docs/: lessons-learned.md
scripts/: patch_signing.py  setup-android-signing.js
src/: router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/android-plugin/: CredentialPlugin.kt  INSTALL.md  MPVLib.kt  MpvPlugin.kt  UpdaterPlugin.kt  VlcPlugin.kt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/resources/: mpv.def  mpv.exp  mpv.lib
src-tauri/src/: android_plugins.rs  lib.rs  main.rs  persist.rs  proxy.rs
src-tauri/src/commands/: credentials.rs  epg.rs  favorites.rs  mod.rs  omdb.rs  player.rs  playlist.rs  resume.rs  tmdb.rs  trending.rs  updater.rs
src-tauri/src/epg/: mod.rs  xmltv.rs
src-tauri/src/playlist/: m3u.rs  mod.rs  stalker.rs  types.rs  xtream.rs
src/data/: movieCategories.ts  seriesCategories.ts
src/hooks/: useUpdate.ts
src/screens/: EpgScreen.css  EpgScreen.tsx  HomeScreen.css  HomeScreen.tsx  LiveTvScreen.css  LiveTvScreen.tsx  LoginScreen.css  (+15 more)
(+23 files in other folders)
